assets/assets/css/docs.scss
@import "variables";
@import "parts/highlight";
@import "parts/admonition";

article {

	h1, h2, h3, h4, h5, h6 {
		&:hover .anchor {
			&::after {
				content: "¶";
			}
			&:hover {
				text-decoration: none;
			}
		}
	}

	blockquote {
		padding: 0 1em;
		color: $bs-secondary;
		border-left: 0.25em solid lighten($bs-gray-500, 5%);
	
		> :first-child {
			margin-top: 0;
		}
	
		> :last-child {
			margin-bottom: 0;
		}
	}

	code, tt {

		padding: 0.2em 0.4em;
		margin: 0;
		font-size: 85%;
		background-color: rgba(black, 0.05);
		border-radius: .25rem;
		color: inherit;
	
	 	br { display: none; }
	}

	pre {
		word-wrap: normal;
		> code {
			padding: 0;
			margin: 0;
			font-size: 100%;
			word-break: normal;
			white-space: pre;
			background: transparent;
			border: 0;
		}
	}
	
	.highlight pre, pre {
		// background: #f8f8f8;
		// padding: 0.5rem;
		// border-radius: 3px;
		padding: 16px;
		border-radius: 6px;
	}

	.highlight pre {
		background-color: $bs-gray-100;
	}

	code, kbd, pre, samp {
		background-color: $bs-gray-100;
	}

	table {
		display: block;
		width: 100%;
		overflow: auto;
	
		th, td {
			padding: 6px 13px;
			border: 1px solid $bs-gray-300;
		}

		tr {
			border-top: 1px solid darken($bs-gray-300, 4%);
		
			&:nth-child(2n) {
				background-color: lighten($bs-gray-200, 4%);
			}

			> th:empty {
				border-color: transparent;
				border-bottom-color: #dee2e6;
				padding: 0;
			}
		}
	
		img {
			background-color: transparent;
		}
	}

	img {
		max-width: 100%
	}

	h1, h2, h3, h4, h5, h6 {
        margin-top: 1.5rem;
        margin-bottom: 1rem
    }

    blockquote, details, dl, ol, p, pre, table, ul, .highlight {
        margin-bottom: 1rem
    }

	h1:first-child {
		margin-top: 0;
	}

    > :last-child {
        margin-bottom: 0
    }

	li {
		* {
			margin-bottom: 0.5rem;
		}
	}

}

#docs-toc nav {
	// @include media-breakpoint-up(lg) {
	//	 position: sticky;
	//	 top: 5rem;
	//	 right: 0;
	//	 z-index: 2;
	//	 height: subtract(100vh, 7rem);
	//	 overflow-y: auto;
	// }

	a.active {
		@media (min-width: $bs-breakpoint-xl) {
			font-weight: 600;
			color: rgba(0,0,0,0.85) !important;	
		}
	}

	> ul > li > ul {
		padding-left: 0
	}

}

#docs-nav {

	a.active {
		font-weight: 600;
		color: rgba(0,0,0,0.85) !important;	
	}

	.docs-nav-section .docs-nav-section span {
		margin-left: -1rem - 0.125rem
	}

	.collapse-button > svg {
		transition: transform 0.35s ease;
	}

	.collapse-button:not(.collapsed) > svg {
		transform: rotate(90deg);
	}

}

#docs-toc nav, 
#docs-nav {

	font-size: .875rem;
	// @include font-size(.875rem);
	width: 100%;
	word-wrap: break-word;

	ul {
		padding-left: 0;
		list-style: none;

		ul {
			padding-left: 1rem;
			margin-top: .25rem;
		}
	}

	li {
		margin-bottom: .25rem;
	}
	
	a {

		color: #6c757d !important;
		text-decoration: none;

		&:hover {
			color: darken(#6c757d, 25%) !important;
		}

		code {
			font: inherit;
		}
	}

}

@media (min-width: $bs-breakpoint-xl) {
	#docs-toc {
		nav > ul {
			position: sticky;
			top: 1.5rem;
			max-height: calc(100vh - 3rem);
			overflow: auto;
			scrollbar-width: thin;

			> li {
				margin-right: 0.25rem
			}
		}
	}
}

@media (min-width: $bs-breakpoint-lg) {
	#docs-pages {
		nav > ul {
			position: sticky;
			top: 1.5rem;
			max-height: calc(100vh - 3rem);
			overflow: auto;
			scrollbar-width: thin;

			> li {
				margin-right: 0.25rem
			}
		}
	}
}

body.dark {

	article {

		code, kbd, pre, samp {
			background: $dark-dp-1;
			color: var(--content-cnt);
		}

		blockquote {
			border-left-color: darken($dark-low-emphasis, 5%);
		}

	}
	
	.collapse-button svg g {
		fill: #9d9d9d
	}

	table {	
		th, td {
			border: 1px solid $bs-gray-800;
		}
	
		tr {
			border-top: 1px solid lighten($bs-gray-800, 4%);
		
			&:nth-child(2n) {
				background-color: darken($bs-gray-900, 4%);
			}

			> th:empty {
				border-color: transparent;
				border-bottom-color: $bs-gray-800;
				padding: 0;
			}
		}
	}

	#docs-toc nav,
	#docs-nav {

		a {
			color: $dark-low-emphasis !important;
	
			&:hover {
				color: $dark-high-emphasis !important;
			}
		}

	} 

	#docs-toc nav {
		a.active {
			@media (min-width: $bs-breakpoint-xl) {
				font-weight: 600;
				color: $dark-high-emphasis !important;	
			}
		}
	}

	#docs-nav {
		a.active {
			font-weight: 600;
			color: $dark-high-emphasis !important;	
		}
	}

}

body.extension-styled {

	article .highlight, article {

		code, kbd, pre, samp {
			background: $light-ext-level-2; 
		}

	}

}

body.dark.extension-styled {

	article .highlight, article {

		code, kbd, pre, samp {
			background: $dark-ext-level-2; 
		}

	}
	
	table {	
		th, td {
			border: 1px solid $bs-gray-700;
		}
	
		tr {
			border-top: 1px solid lighten($bs-gray-700, 4%);
		
			&:nth-child(2n) {
				background-color: darken($bs-gray-800, 4%);
			}

			> th:empty {
				border-color: transparent;
				border-bottom-color: $bs-gray-700;
				padding: 0;
			}
		}
	}

}

